# sagemaker-instances-benchmark-ner

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: colab.ipynb
